css/style.css
/* ... */
ul,
li {
    list-style: none;
    margin: 0;
    padding: 0;
}
a,
a:hover,
a:active,
a:focus {
    text-decoration: none;
    outline: none;
}
img {
    max-width: 100%;
}
input[type="text"],
input[type="email"] {
  font-family: 'Open Sans';
}
.ui-menu .ui-menu-item {
  position: relative;
  margin: 0;
  padding: 7px 10px;
  cursor: pointer;
  min-height: 0;
  list-style-image: none;
  color: #000;
  font-size: 13px;
  font-weight: normal;
  background-color: transparent;
}


/**
/*******************************
*********HOME V1 STYLE START ***********
********************************/

/**
* Preloader box Styles.
**/
.header_wrapper{
	background: #222222;
	height:190px;
	width:100%;
}
#header_area .logo_area > div {
  position: relative;
}
#header_area .logo_area > div:before {
  content: '';
  position: absolute;
  top: -20px;
  right: 20px;
  /* background: #1D1D1D; */
  width: 2000px;
  height: 190px;
}
#header_area .logo_area > div a {
  position: relative;
}
.header_top_bar {
    padding: 20px 0;
}
.logo_area img {
    padding-top: 10px;
}
.column_details{
	float:left;
	width:100%;
}
.column_details h2{
	font-family: 'Open Sans', sans-serif;
	color:#fff;
	font-size:14px;
}

.column_details p{
	font-family: 'Open Sans', sans-serif;
	color:#ef5050;
	font-size:16px;
}
.details_icon i {
    margin-left: 15px;
    font-size: 13px;
	font-style:normal;
}

.column_details{
	float:left;
}

.column_right h2 {
    font-family: 'Open Sans', sans-serif;
    color: rgba(180, 175, 175, 0.856);
    font-size: 16px;
    line-height: 0px;
}
.column_right h3{
	font-family: 'Open Sans', sans-serif;
	color:#fff;
	text-transform:uppercase;
	font-size:18px;
}
.column_one{
	width:24%;
}
.column_two{
	width:25%;
}

.column_three {
    width: 27%;
}
.column_left i {
    color: #fff;
    float: left;
    font-size: 35px;
    height: 100%;
    overflow: hidden;
    width: 20%;
    padding-top: 15px;
}
.column_right {
    float: right;
    width:75%;
    font-size: 20px;

}
.column_three h3{
		font-weight:700;
}
.column_four {
    width: 24%;
    float: right;
    padding-top: 20px;
}
.header_social{}
.header_social a {
    text-decoration: none;
    float: right;
    margin: 0 5px;
}
.header_social i {
    width: 38px;
    height: 38px;
    border-radius: 100%;
    border: 1px solid #fff;
    font-size: 18px;
    text-align: center;
    padding-top: 10px;
	color:#fff
}
.header_social i:hover{
    background:#ef5050;
	color:#fff;
	border:0px solid;
}


/******** Top Bar Styles ***********/

/************ Main menu style ************/
.nav-area-fixed {
    bottom: 8px;
}
/************ llamanos ahora style ************/

.fixed-button-llamanos-ahora {
background-color: #357ebd;
border-radius: 14px 14px 14px 14px;
box-shadow: 1px 4px 4px #333333;
height: 40px;
width: 300px;
font-size: 25px;
padding-top: 2px !important;
}
#btn-llamanos-ahora-celular {
}
#btn-llamanos-ahora-fijo {
}
.button-llamanos-ahora-col {
    padding-left: 250px ;
   top: 20px;
}
/************ llamanos ahora style ************/

.logo_hide {
	display:none;
}
.nav_area {
    height: 70px;
    width: 100%;
    margin-top: 27px;
    background: #ef5050;
}
.stricky-fixed .nav_area {
	margin-top: 0px;
}
.icon.icon-padding i {
    padding-top: 4px;
    width: 64px;
    padding-left: 8%;
}
.manu_area {
    background: #ef5050;
    height: 70px;
    width: 100%;
    float: left;
}
.quote {
    background: #f95b5b;
    height: 70px;
    width: 220px;
    margin: 0 0;
    float: right;
    margin-right: -14px;
}
.quote p {
    color: #fff;
    font-size: 14px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
    padding: 20px 0;
    text-align: center;
    margin-right: -1px;
    transition: all .3s ease;
}
.quote p:hover {
  background: #222222;
}
.quote i {
    margin: 9px;
    width: 33px;
}
.nav>li>a:hover, .nav>li>a:focus {
    text-decoration: none;
    background-color: none !Important;
}
.mainmenu li a {
    font-size: 14px;
    color: #fff;
    font-weight: 700;
    text-transform: uppercase;
    padding: 0 15px;
    position: relative;
    -webkit-transition: all .3s ease;
    transition: all .3s ease;
    vertical-align: bottom;
    text-decoration: none;
    font-family:  'Open Sans', sans-serif;
}
 .mainmenu li a:hover{
	 background:#f95b5b;
 }

.nav>li>a:hover, .nav>li>a:focus {
    text-decoration: none;
    background-color:none;
	color:#fff

}
.dropdown-menu {
    top: 100% !important;
    box-shadow: 0 0 0 0 !IMPORTANT;
    border-top: 2px solid #fff;
}
.dropdown-menu>li>a {
    display: block;
    padding: 0 20px !important;
    clear: both;
    font-weight: normal;
    line-height: 2.428571;
    color:#d9255c;
    white-space: nowrap;
}
.navbar-nav>li>.dropdown-menu {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
    background: #ef5050;
    color: #fff;
    width: 200px !important;
}
.navbar-nav>li>.dropdown-menu li {

}
.navbar-nav>li>.dropdown-menu  li a:hover{
	background:#f95b5b;
	color:#fff !important;
	transition: all ease-out 300ms;
	-webkit-transition: all ease-out 300ms;
	-ms-transition: all ease-out 300ms;
	-moz-transition: all ease-out 300ms;

}
.navbar-nav .dropdown-menu > li > a {
  font-family: "Open Sans",sans-serif;
  font-size: 13px;
  font-weight: 300;
  text-transform: capitalize;
  line-height: 40px;
}
.nav>li>a:hover, .nav>li>a:focus {
    text-decoration: none;
    background-color: none;
    color: #fff;
}
.mainmenu li:hover {
    background: #f95b5b;
}
.nav>li>a:hover, .nav>li>a:focus {
    text-decoration: none;
    background-color: none;

}

.nav .open>a, .nav .open>a:hover,
.nav .open>a:focus{
	background:none !important;
}
 .nav .caret {
	 display: none;
}


/** sticky menu **/
 .mainmenu li .stricky-fixed{
	 padding:20px 0;
 }
/* ... */

